@@ -1,3 +1,7 @@
+(10/23/2006)
+
+*** made std* relative to the job directory
+
 (10/18/2006)
 
 *** Updated file resource to support createDirectories
